--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
-    "argon2": "^0.44.0",
-    "bcrypt": "^6.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "bcryptjs": "^3.0.3",
+    "express-session": "^1.18.2"
   }
 }
